# hal-stm32f407ighx

./: .clangd  .gitignore  .mxproject  CMakeLists.txt  dev.py  hal-stm32f407igh.ioc  switch_board.py  toolchain-arm-none-eabi.cmake
.zed/: settings.json  tasks.json
Core/Inc/: dma.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Core/Src/: can.c  dma.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
Lib/: gemini-conversation-1760453711889.json  gemini-conversation-1760455512983.json
Lib/BMI088D/: README.md  bmi088d.md  example.c
Lib/BMI088D/Inc/: bmi088d.h  bmi088d_all.h  bmi088d_calibration.h  bmi088d_ekf.h  bmi088d_fuzzy.h  bmi088d_hal.h  bmi088d_ols.h  bmi088d_pid.h  bmi088d_quaternion.h  bmi088d_reg.h  bmi088d_sensor.h  bmi088d_types.h  bmi088d_utils.h
Lib/BMI088D/Src/: bmi088d.c  bmi088d_calibration.c  bmi088d_ekf.c  bmi088d_fuzzy.c  bmi088d_hal.c  bmi088d_ols.c  bmi088d_pid.c  bmi088d_quaternion.c  bmi088d_sensor.c  bmi088d_utils.c
Lib/BMI880D/: example.c
Lib/BMI880D/Inc/: bmi088d.h  bmi088d_ekf.h  bmi088d_hal.h  bmi088d_pid.h  bmi088d_sensor.h  bmi088d_utils.h
Lib/BMI880D/Src/: bmi088d.c  bmi088d_ekf.c  bmi088d_hal.c  bmi088d_pid.c  bmi088d_quaternion.c  bmi088d_utils.c
Lib/bmi088_algo/: README.md  test_quaternion_ekf.c  verification_test  verification_test.c
Lib/bmi088_algo/Inc/: bmi088_algorithm.h  bmi088_quaternion_ekf.h
Lib/bmi088_algo/Src/: bmi088_algorithm.c  bmi088_quaternion_ekf.c
Lib/bmi088d/Inc/: bmi088d_calibration.h  bmi088d_quaternion.h  bmi088d_reg.h  bmi088d_types.h
Lib/bmi088d/Src/: bmi088d_calibration.c  bmi088d_sensor.c
User/: def.h  handle.h  main_chassis.c  main_chassis.h  main_gimbal.c  main_gimbal.h  type.c  type.h
User/BSP/: all.h  can_fifo0.c  can_fifo0.h  can_fifo0_it.c  can_fifo0_it.h  can_fifo1.c  can_fifo1.h  can_fifo1_it.c  can_fifo1_it.h  can_tx_queue.c  can_tx_queue.h  cron.c  cron.h  dwt.c  dwt.h  gpio_exti.c  gpio_exti.h  uart.c  uart.h  uart_it.c  uart_it.h
User/Drivers/: all.h
User/Drivers/BMI088/: driver.c  driver.h
User/Drivers/BMI880/: driver.c  driver.h
User/Drivers/BOARD_CAN_COM/: cb.c  cb.h  driver.c  driver.h  protocol.c  protocol.h
User/Drivers/MOT_DMJ4310/: conf.h  driver.h  drvier.c  protect.c  protect.h  protocol.c  protocol.h
User/Drivers/MOT_DMJ6006/: conf.h  driver.h  drvier.c  protect.c  protect.h  protocol.c  protocol.h
User/Drivers/MOT_M3508/: driver.c  driver.h  protect.c  protect.h  protocol.c  protocol.h
User/Drivers/RC_DR16/: cb.c  cb.h  driver.c  driver.h  protocol.c  protocol.h
User/Tasks/: all.h  chassis.c  chassis.h  gimbal.c  gimbal.h  protect.c  protect.h  protect_chassis.c  protect_chassis.h  protect_gimbal.c  protect_gimbal.h
User/Tasks/PID_DMJ4310/: conf.h  feedforward.c  feedforward.h  pidv.c  pidv.h  pidx.c  pidx.h
User/Tasks/PID_DMJ6006/: conf.h  feedforward.c  feedforward.h  pidv.c  pidv.h  pidx.c  pidx.h
User/Tasks/PID_M3508/: conf.h  pidv.c  pidv.h  pidx.c  pidx.h
User/Tasks/PID_WHEEL/: conf.h  feedforward.c  feedforward.h  pidv.c  pidv.h  pidx.c  pidx.h
User/Tasks/RC_CH/: wheel.h  yaw.h
User/Tasks/RC_TH/: feeder.h  pitch.h
User/Utils/: motion.c  motion.h  piecewise_pid.c  piecewise_pid.h
User/bsp/: cron.c  cron.h
User/driver/motor_dmj4310/: conf.h  driver.h  protocol.c  protocol.h
User/driver/motor_m3508/: conf.h  driver.h  protocol.c  protocol.h
User/driver/rc_dr16/: protect.h  protocol.c  protocol.h
